Ran build development

--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.wV6BuCkg.js",
+    "file": "_app/immutable/entry/app.B0a8DPKf.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -30,7 +30,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.CJWUQ8ez.js",
+    "file": "_app/immutable/nodes/1.D3YTan06.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -38,7 +38,7 @@
     "imports": [
       "_C3mXhKtC.js",
       "_CeLBSusy.js",
-      "_BbzpVy4W.js"
+      "_Bz4lMRFI.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -69,8 +69,8 @@
       "_app/immutable/assets/3.C7mYxGlc.css"
     ]
   },
-  "_BbzpVy4W.js": {
-    "file": "_app/immutable/chunks/BbzpVy4W.js",
+  "_Bz4lMRFI.js": {
+    "file": "_app/immutable/chunks/Bz4lMRFI.js",
     "name": "entry",
     "imports": [
       "_C3mXhKtC.js"
@@ -88,12 +88,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.CiqFQWlS.js",
+    "file": "_app/immutable/entry/start.BLLK-YvJ.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_BbzpVy4W.js"
+      "_Bz4lMRFI.js"
     ]
   }
 }
