Updated for svelte

--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.79d7WkyL.js",
+    "file": "_app/immutable/entry/app.C18lGqgq.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -30,7 +30,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.PyMZmpXg.js",
+    "file": "_app/immutable/nodes/1.DzC0QsKF.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -38,7 +38,7 @@
     "imports": [
       "_C3mXhKtC.js",
       "_CeLBSusy.js",
-      "_CUZer_wN.js"
+      "_BpwTItL8.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -69,16 +69,16 @@
       "_app/immutable/assets/3.C7mYxGlc.css"
     ]
   },
-  "_C3mXhKtC.js": {
-    "file": "_app/immutable/chunks/C3mXhKtC.js",
-    "name": "scheduler"
-  },
-  "_CUZer_wN.js": {
-    "file": "_app/immutable/chunks/CUZer_wN.js",
+  "_BpwTItL8.js": {
+    "file": "_app/immutable/chunks/BpwTItL8.js",
     "name": "entry",
     "imports": [
       "_C3mXhKtC.js"
     ]
+  },
+  "_C3mXhKtC.js": {
+    "file": "_app/immutable/chunks/C3mXhKtC.js",
+    "name": "scheduler"
   },
   "_CeLBSusy.js": {
     "file": "_app/immutable/chunks/CeLBSusy.js",
@@ -88,12 +88,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.BDwwgNDi.js",
+    "file": "_app/immutable/entry/start.BcWottpW.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_CUZer_wN.js"
+      "_BpwTItL8.js"
     ]
   }
 }
