--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.C18lGqgq.js",
+    "file": "_app/immutable/entry/app.CJl1SJT-.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -30,7 +30,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.DzC0QsKF.js",
+    "file": "_app/immutable/nodes/1.DHOSnxcn.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -38,7 +38,7 @@
     "imports": [
       "_C3mXhKtC.js",
       "_CeLBSusy.js",
-      "_BpwTItL8.js"
+      "_C0izu9qQ.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -69,8 +69,8 @@
       "_app/immutable/assets/3.C7mYxGlc.css"
     ]
   },
-  "_BpwTItL8.js": {
-    "file": "_app/immutable/chunks/BpwTItL8.js",
+  "_C0izu9qQ.js": {
+    "file": "_app/immutable/chunks/C0izu9qQ.js",
     "name": "entry",
     "imports": [
       "_C3mXhKtC.js"
@@ -88,12 +88,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.BcWottpW.js",
+    "file": "_app/immutable/entry/start.Djv1FPEl.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_BpwTItL8.js"
+      "_C0izu9qQ.js"
     ]
   }
 }
