--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.CJl1SJT-.js",
+    "file": "_app/immutable/entry/app.DWnAal8J.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -30,7 +30,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.DHOSnxcn.js",
+    "file": "_app/immutable/nodes/1.CsI2rEf0.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -38,7 +38,7 @@
     "imports": [
       "_C3mXhKtC.js",
       "_CeLBSusy.js",
-      "_C0izu9qQ.js"
+      "_DHFB-38-.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -69,13 +69,6 @@
       "_app/immutable/assets/3.C7mYxGlc.css"
     ]
   },
-  "_C0izu9qQ.js": {
-    "file": "_app/immutable/chunks/C0izu9qQ.js",
-    "name": "entry",
-    "imports": [
-      "_C3mXhKtC.js"
-    ]
-  },
   "_C3mXhKtC.js": {
     "file": "_app/immutable/chunks/C3mXhKtC.js",
     "name": "scheduler"
@@ -87,13 +80,20 @@
       "_C3mXhKtC.js"
     ]
   },
+  "_DHFB-38-.js": {
+    "file": "_app/immutable/chunks/DHFB-38-.js",
+    "name": "entry",
+    "imports": [
+      "_C3mXhKtC.js"
+    ]
+  },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.Djv1FPEl.js",
+    "file": "_app/immutable/entry/start.ih788Pox.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_C0izu9qQ.js"
+      "_DHFB-38-.js"
     ]
   }
 }
