--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.DWnAal8J.js",
+    "file": "_app/immutable/entry/app.BGD9irEr.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -30,7 +30,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.CsI2rEf0.js",
+    "file": "_app/immutable/nodes/1.BMAAGOR6.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -38,7 +38,7 @@
     "imports": [
       "_C3mXhKtC.js",
       "_CeLBSusy.js",
-      "_DHFB-38-.js"
+      "_DSr7hFQS.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -80,20 +80,20 @@
       "_C3mXhKtC.js"
     ]
   },
-  "_DHFB-38-.js": {
-    "file": "_app/immutable/chunks/DHFB-38-.js",
+  "_DSr7hFQS.js": {
+    "file": "_app/immutable/chunks/DSr7hFQS.js",
     "name": "entry",
     "imports": [
       "_C3mXhKtC.js"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.ih788Pox.js",
+    "file": "_app/immutable/entry/start.C-T6xTd4.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_DHFB-38-.js"
+      "_DSr7hFQS.js"
     ]
   }
 }
