--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "npm run build"
-  publish = "dist"  # or "build" if using Create React App
+  publish = "build"
 
 [[redirects]]
   from = "/*"
