--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chromium": "^3.0.3",
     "node-fetch": "^3.3.2",
     "puppeteer": "^24.4.0",
-    "puppeteer-core": "^24.4.0"
+    "puppeteer-core": "^24.4.0",
+    "twilio": "^5.5.1"
   }
 }
